--- a/sportmates_frontend/app/src/main/res/layout/activity_login.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
 
     <Button
         android:background="@color/colorPrimary"
-        android:textColor="@color/colorText"
+        android:textColor="@color/buttonTextColor"
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
 
     <Button
         android:background="@color/colorPrimary"
-        android:textColor="@color/colorText"
+        android:textColor="@color/buttonTextColor"
         android:id="@+id/reg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
