--- a/sportmates_frontend/app/src/main/res/layout/activity_registration.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_registration.xml
@@ -123,7 +123,7 @@
         android:layout_marginTop="340dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="@string/profile_city"
+        android:hint="@string/profile_locale"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
