--- a/sportmates_frontend/app/src/main/res/layout/event_page.xml
+++ b/sportmates_frontend/app/src/main/res/layout/event_page.xml
@@ -17,6 +17,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:background="#303F9F" />
+        android:background="@color/colorPrimaryDark" />
 
 </LinearLayout>
