--- a/sportmates_frontend/app/src/main/res/layout/activity_event.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_event.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="hu.application.sportmates.controller.EventActivity">
+    tools:context="hu.application.sportmates.controller.EventActivity"
+    >
 
     <TextView
         android:text="@string/my_events_activity_header"
@@ -15,6 +16,9 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        android:background="@drawable/gradient_background"
+        android:textColor="#FFFFFF"
         />
 
     <ListView
