--- a/sportmates_frontend/app/src/main/res/layout/activity_main.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:background="@drawable/gradient_background"
+            android:textColor="#FFFFFF"
             android:id="@+id/events_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
