--- a/sportmates_frontend/app/src/main/res/layout/event_page.xml
+++ b/sportmates_frontend/app/src/main/res/layout/event_page.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
@@ -11,8 +11,15 @@
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
         android:padding="16dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:src="@drawable/ic_add_circle_outline_black_24dp"/>
 
     <View
         android:layout_width="match_parent"
